# purejaxql

./: .gitignore  experiment-plan.md  main.py  paper_plots.py  plot_colors.py  plot_distribution_analysis.py  plot_sampling_distributions.py  plot_wandb_craftax_rnn_compare.py  plot_wandb_minatar.py  pyproject.toml  run_cauchy_mog_comparison.py  run_distribution_analysis.py  run_flexibility_parametric_family.py  run_flexibility_parametric_family_v2.py
docs/: distribution_analysis_omega_tuning_2026-04-21.md
phitd-code-submission/: plot_colors.py  readme.md
purejaxql/: cauchy_mixture_supervised.py  cqn_minatar.py  cqn_rnn_craftax.py  cqn_rnn_distributed_craftax.py  ctd_minatar.py  ctd_rnn_craftax.py  distributional_pqn_minatar.py  distributional_pqn_rnn_craftax.py  mog_pqn_craftax.py  mog_pqn_minatar.py  (+19 more)
submission/: paper_plots.py  pyproject.toml  readme.md  run_distribution_analysis.py
submission/purejaxql/: distributional_pqn_rnn_craftax.py  phi_td_pqn_rnn_craftax.py  pqn_craftax.py  pqn_rnn_craftax.py
submission/purejaxql/config/: config.yaml
submission/purejaxql/config/alg/: ctd_rnn_craftax.yaml  phi_td_minatar_dirac.yaml  phi_td_minatar_gamma.yaml  phi_td_minatar_quantile.yaml  phi_td_rnn_craftax_categorical.yaml  phi_td_rnn_craftax_cauchy.yaml  phi_td_rnn_craftax_dirac.yaml  phi_td_rnn_craftax_gamma.yaml  phi_td_rnn_craftax_laplace.yaml  phi_td_rnn_craftax_logistic.yaml  phi_td_rnn_craftax_mog.yaml  pqn_rnn_craftax.yaml  qtd_minatar.yaml
submission/purejaxql/config/analysis/: distribution.yaml
submission/purejaxql/utils/: batch_renorm.py  phi_td_cf.py
(+195 files in other folders)
