[project]
name = "purejaxql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chex>=0.1.91",
    "flax>=0.12.3",
    "gymnax>=0.0.9",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.9.0.1",
    "optax>=0.2.7",
    "safetensors>=0.7.0",
    "wandb==0.18.0",
]
